grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: grafana
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: grafana
